--- a/nfpa/src/app/footer/footer.component.html
+++ b/nfpa/src/app/footer/footer.component.html
@@ -1,18 +1,187 @@
-<p>footer works!</p>
+<!-- Footer -->
+<footer class="bg-dark text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
 
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum vel laudantium consequuntur alias dolorum nesciunt, maiores error neque excepturi eligendi nostrum dolorem. Quod quidem explicabo iure alias eos nostrum officia!
-Vero, impedit? Quam, reiciendis, animi dolore rem autem temporibus officia earum saepe, beatae quae ea sit. Ducimus praesentium sequi asperiores ullam alias. Explicabo sequi iure fugit impedit corrupti et ea?
-Non quae nulla id corporis sunt, tempora ex laborum accusamus voluptatibus suscipit veniam atque, quasi at illo, dolore cupiditate. Commodi at fuga distinctio odit mollitia soluta eveniet omnis officiis voluptas.
-Molestias, cupiditate cumque nostrum quod eaque ratione cum sunt velit unde impedit ullam culpa deserunt pariatur, distinctio magni natus quaerat nesciunt nobis doloremque sequi error! Explicabo hic voluptatibus est recusandae.
-Eveniet corporis id libero officiis omnis culpa. Deleniti, incidunt saepe? Dolorum, veritatis. Modi quo expedita, dolore recusandae dolores assumenda nisi nihil fuga est doloremque fugiat distinctio sit accusantium qui a.
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea placeat soluta iure quae, ipsam ratione blanditiis, suscipit dolorum dolor rem quas quaerat fugiat deserunt voluptatem distinctio ipsa eveniet. Quasi, incidunt!
-Doloribus voluptate accusantium labore officia. Facere velit autem, aperiam ex neque inventore minus non eveniet vel similique dolor sequi optio a eum perspiciatis, obcaecati exercitationem enim. Harum voluptatem molestias cupiditate?
-Harum cupiditate ipsam, distinctio magnam, adipisci earum officiis nam commodi numquam fugiat minus velit ipsum, consectetur obcaecati quis temporibus totam. Corrupti aut fuga voluptates iste dignissimos qui molestiae doloremque repellat.
-Rerum quisquam pariatur dolore obcaecati maxime impedit reiciendis unde asperiores quidem quaerat cumque natus illo porro vero, accusantium ullam fugit, alias voluptate dolorum voluptatum laudantium tempore? Accusamus laboriosam veniam temporibus!
-Fugiat officia, illo placeat accusantium minima vero molestiae velit esse nam voluptatem quam pariatur quis libero ut, possimus incidunt! Harum odit non quas eveniet neque doloremque animi doloribus ipsa earum.
-Sapiente temporibus, quos nemo iure nobis ipsam molestias commodi ipsa beatae voluptas earum cumque quibusdam, iusto quam. Obcaecati provident facere sint maxime ducimus voluptatem omnis voluptates est magnam! Ab, consequatur.
-Vero architecto sed, perferendis ipsum voluptatibus velit corrupti adipisci consequuntur temporibus ab odit et eum expedita hic ut distinctio, omnis doloribus natus nam. Quo animi quibusdam, adipisci alias similique quisquam.
-Dolorum minima nam voluptate, eaque numquam enim voluptatum fugit quos? Odio voluptate ullam dignissimos eveniet vero, voluptates saepe officiis quasi aperiam incidunt excepturi animi dolore! Nisi voluptates sed eligendi maxime.
-Sequi incidunt at accusamus optio voluptate voluptatem, quod earum natus quos vitae doloremque? Deleniti magnam, eveniet maiores eligendi quae deserunt. In, impedit iure! Tempore impedit consectetur eius. Minima, a animi!
-Harum, illum debitis nam rem quas sunt laboriosam enim minus nihil atque a sit nesciunt eum magni, deleniti mollitia dicta cumque vel at? Illum facilis ullam accusantium iusto ad natus!
-hii
+      <!-- Twitter -->
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-twitter"></i
+      ></a>
+
+      <!-- Google -->
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+      <!-- Linkedin -->
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+
+      <!-- Github -->
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-github"></i
+      ></a>
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Form -->
+    <section class="">
+      <form action="">
+        <!--Grid row-->
+        <div class="row d-flex justify-content-center">
+          <!--Grid column-->
+          <div class="col-auto">
+            <p class="pt-2">
+              <strong>Sign up for our newsletter</strong>
+            </p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-5 col-12">
+            <!-- Email input -->
+           
+              <input mdbInput type="email" id="form5Example24" class="form-control" />
+              <label mdbLabel class="form-label" for="form5Example24">Email address</label>
+         
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-auto">
+            <!-- Submit button -->
+            <button mdbRipple type="submit" class="btn btn-outline-light mb-4">
+              Subscribe
+            </button>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </form>
+    </section>
+    <!-- Section: Form -->
+
+    <!-- Section: Text -->
+    <section class="mb-4">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+        repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+        eum harum corrupti dicta, aliquam sequi voluptate quas.
+      </p>
+    </section>
+    <!-- Section: Text -->
+
+    <!-- Section: Links -->
+    <section class="">
+      <!--Grid row-->
+      <div class="row">
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Link 1</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 2</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 3</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 4</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Link 1</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 2</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 3</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 4</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Link 1</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 2</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 3</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 4</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Link 1</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 2</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 3</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 4</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+    </section>
+    <!-- Section: Links -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 Copyright:
+    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
