--- a/nfpa/src/app/navbar/navbar.component.css
+++ b/nfpa/src/app/navbar/navbar.component.css
@@ -3,49 +3,88 @@ nav{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     z-index: 100;
 }
 
 .navigate {
     width: 100%;
-    height: 12vh;
-    background-color: #ffffff; /* Set your desired background color */
+    height: 4.5rem;
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px 0 #0000001a;
 }
 
 .scrollNavigateUp {
     position: fixed;
     top: 15px;
-    left: 20px; 
-    border-radius: 15px;
-    width: 95vw;
-    height: 10vh;
-    background-color: #fc4242; 
+    left: 10px;
+    border-radius: 20px;
+    width: 98%;
+    height: 4.5rem;
+    background-color: #0a5983; 
     animation: fadeInUp 0.5s ease;
+    color: white;
+
 }
+
+.scrollNavigateUp .menu a {
+    color: white;
+}
+
+/* 
+
+*/
 
 
 .logoName {
-    color: black;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.menu {
+    flex: 2;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    width: 50%;
+    justify-content: center;
+}
+
+.logoName span{
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    word-spacing: 1px;
+    
+    /* background-image: url("C:/Users/Admin/Desktop/fire2.jpg");
+    background-repeat: repeat;
+    background-position: center; 
+    background-size: contain; 
+    background-clip: text; 
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;  */
+}
+
+.logoImage {
+    width: 80px;
+    height: 70px;
+    margin-right: 15px;
+}
+
+.menu {
+    flex: 3;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
+    font-size: 15px;
+    letter-spacing: 1px;
 }
 
 .menu a {
     text-decoration: none;
     color: #000000;
+}
+
+.menu a:hover {
+    font-weight: 400;
 }
 
 @keyframes fadeInUp {
