--- a/nfpa/src/app/navbar/navbar.component.html
+++ b/nfpa/src/app/navbar/navbar.component.html
@@ -1,10 +1,17 @@
 
 <nav [ngClass]="{'navigate': isOriginal, 'scrollNavigateUp': isScrollUp }">
-    <div class="logoName">NFPA India Pvt. Ltd</div>
+
+    <div class="logoName">
+      <img src="../../assets/images/logo-cropped.jpeg" alt="logo" class="logoImage"  *ngIf="isOriginal"/>
+      <img src="../../assets/images/logo-cropped - colored.jpeg" alt="logo" class="logoImage" *ngIf="isScrollUp" />
+      <span class="fire-logo">NFPA India Pvt. Ltd</span>
+    </div>
+
     <div class="menu">
       <a href="#">Home</a>
       <a href="#">About Us</a>
       <a href="#">Products & Services</a>
       <a href="#">Contact Us</a>
     </div>
+
 </nav>
