--- a/nfpa/src/app/navbar/navbar.component.html
+++ b/nfpa/src/app/navbar/navbar.component.html
@@ -8,10 +8,14 @@
     </div>
 
     <div class="menu">
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Products & Services</a>
-      <a href="#">Contact Us</a>
+      
+     <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
+     <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About Us</a>
+     <a routerLink="/total-systems" routerLinkActive="active" ariaCurrentWhenActive="page">Products & Services</a>
+     <a routerLink="/contact" routerLinkActive="active" ariaCurrentWhenActive="page">Contact</a>
+
     </div>
 
 </nav>
+
+<router-outlet></router-outlet>
