--- a/nfpa/src/app/navbar/navbar.component.html
+++ b/nfpa/src/app/navbar/navbar.component.html
@@ -8,9 +8,9 @@
     </div>
 
     <div class="menu">
-      <a href="#">Home</a>
+      <a href="../app.component.html">Home</a>
       <a href="#">About Us</a>
-      <a href="#">Products & Services</a>
+      <a href="../total-systems/total-systems.component.html">Products & Services</a>
       <a href="#">Contact Us</a>
     </div>
 
