--- a/nfpa/src/app/total-systems/total-systems.component.html
+++ b/nfpa/src/app/total-systems/total-systems.component.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Items</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <div class="heading-title">
+        <h1>Systems</h1>
+    
     <div class="container">
         <div class="card">
             <div class="imgBx">
                 <a href="#">
-                    <img class="image" src="images/img1.jpg" alt="image">
+                    <img class="image" src="../../assets/images/img1.jpg" alt="image">
                 </a>
             </div>
             <div class="details">
@@ -26,7 +21,7 @@
         <div class="card">
             <div class="imgBx">
                 <a href="#">
-                    <img class="image" src="/images/img3.webp" alt="image">
+                    <img class="image" src="../../assets/images/img2.webp" alt="image">
                 </a>
             </div>
             <div class="details">
@@ -42,7 +37,7 @@
         <div class="card">
             <div class="imgBx">
                 <a href="#">
-                    <img class="image" src="/images/img4.webp" alt="image">
+                    <img class="image" src="../../assets/images/img3.webp" alt="image">
                 </a>
             </div>
             <div class="details">
@@ -58,7 +53,7 @@
         <div class="card">
             <div class="imgBx">
                 <a href="#">
-                    <img class="image" src="/images/img2.webp" alt="image">
+                    <img class="image" src="../../assets/images/img4.webp" alt="image">
                 </a>
             </div>
             <div class="details">
@@ -72,5 +67,146 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+</div>
+
+<div class="heading-title">
+    <h1>Products</h1>
+
+<div class="container">
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Fire Extinguisher</h2>
+            <br>
+            <ul>
+                <li>C02 fire Extinguisher</li>
+                <li>Dry powder fire Extinguisher</li>
+                <li>Clean Agent fire Extinguisher</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Fire Alarm System</h2>
+            <br>
+            <ul>
+                <li>Conventional Fire Alarm System</li>
+                <li>Standalone Smoke Detector</li>
+                <li>Conventional Heat Detector</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Industrial Valves</h2>
+            <br>
+            <ul>
+                <li>Fire Hydrant Valve</li>
+                <li>Ul Listed Sprinkler</li>
+                <li>Fire Lines Valves</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Industrial Valves</h2>
+            <br>
+            <ul>
+                <li>Fire Hydrant Valve</li>
+                <li>Ul Listed Sprinkler</li>
+                <li>Fire Lines Valves</li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+
+<div class="heading-title">
+    <h1>Services</h1>
+
+<div class="container">
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Fire Suppression System</h2>
+            <br>
+            <ul>
+                <li>Wet Chemical Fire Suppression System</li>
+                <li>Electrical Panel Fire Suppression System</li>
+                <li>Tube Base Suppression System</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Fire Alarm System</h2>
+            <br>
+            <ul>
+                <li>Conventional Fire Alarm System</li>
+                <li>Standalone Smoke Detector</li>
+                <li>Conventional Heat Detector</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Industrial Valves</h2>
+            <br>
+            <ul>
+                <li>Fire Hydrant Valve</li>
+                <li>Ul Listed Sprinkler</li>
+                <li>Fire Lines Valves</li>
+            </ul>
+        </div>
+    </div>
+    <div class="card">
+        <div class="imgBx">
+            <a href="#">
+                <img class="image" src="../../assets/images/img1.jpg" alt="image">
+            </a>
+        </div>
+        <div class="details">
+            <h2 class="heading">Industrial Valves</h2>
+            <br>
+            <ul>
+                <li>Fire Hydrant Valve</li>
+                <li>Ul Listed Sprinkler</li>
+                <li>Fire Lines Valves</li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
