--- a/nfpa/src/styles.css
+++ b/nfpa/src/styles.css
@@ -2,6 +2,9 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
 @import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
 
+@import '@fortawesome/fontawesome-free/css/all.css';
+@import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
+
 *{
     padding: 0;
     margin: 0;
