--- a/nfpa/src/app/homepage/homepage.component.html
+++ b/nfpa/src/app/homepage/homepage.component.html
@@ -6,6 +6,12 @@
       <source src="../../assets/intro-vdo.mp4" type="video/mp4" />
     </video>
   </div>
+
+  <app-our-vision/>
+  <app-our-products/>
+  <app-our-services/>
+  <app-certification/>
+
   
 <!-- VERY IMPORTANT:
   give credits to 
@@ -68,6 +74,8 @@
     </div>
 
   </div>
+
+  <our-customers/>
   
 </section>
  
