--- a/nfpa/src/app/navbar/navbar.component.html
+++ b/nfpa/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
      <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
      <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About Us</a>
      <a routerLink="/total-systems" routerLinkActive="active" ariaCurrentWhenActive="page">Products & Services</a>
-     <a routerLink="/contact" routerLinkActive="active" ariaCurrentWhenActive="page">Contact</a>
+     <a routerLink="/contact-us" routerLinkActive="active" ariaCurrentWhenActive="page">Contact Us</a>
 
     </div>
 
