amruta changes updated perfect

--- a/nfpa/src/app/navbar/navbar.component.html
+++ b/nfpa/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <nav [ngClass]="{'navigate': isOriginal, 'scrollNavigateUp': isScrollUp }">
 
     <div class="logoName">
-      <img src="../../assets/images/logo-cropped.jpeg" alt="logo" class="logoImage"  *ngIf="isOriginal"/>
+      <img src="../../assets/images/logo-cropped - colored.jpeg" alt="logo" class="logoImage"  *ngIf="isOriginal"/>
       <img src="../../assets/images/logo-cropped - colored.jpeg" alt="logo" class="logoImage" *ngIf="isScrollUp" />
       <span class="fire-logo">NFPA India Pvt. Ltd</span>
     </div>
