--- a/nfpa/src/app/navbar/navbar.component.css
+++ b/nfpa/src/app/navbar/navbar.component.css
@@ -10,8 +10,13 @@ nav{
 .navigate {
     width: 100%;
     height: 4.5rem;
-    background-color: #ffffff;
+    background-color: #0a5983;
+    color: #fff;
     box-shadow: 0 2px 4px 0 #0000001a;
+}
+
+.navigate .menu a{
+    color: white;
 }
 
 .scrollNavigateUp {
