--- a/nfpa/src/app/total-systems/total-systems.component.html
+++ b/nfpa/src/app/total-systems/total-systems.component.html
@@ -1,90 +1,61 @@
-<div class="container">
-  <div class="card">
-    <div class="imgBx">
-      <a href="#">
-        <img class="image" src="images/img1.jpg" alt="image" />
-      </a>
-    </div>
-    <div class="details">
-      <h2 class="heading">Fire Suppression System</h2>
-      <br />
-      <ul>
-        <li>Wet Chemical Fire Suppression System</li>
-        <li>Electrical Panel Fire Suppression System</li>
-        <li>Tube Base Suppression System</li>
-      </ul>
-    </div>
-  </div>
-  <div class="card">
-    <div class="imgBx">
-      <a href="#">
-        <img class="image" src="/images/img3.webp" alt="image" />
-      </a>
-    </div>
-    <div class="details">
-      <h2 class="heading">Fire Alarm System</h2>
-      <br />
-      <ul>
-        <li>Conventional Fire Alarm System</li>
-        <li>Standalone Smoke Detector</li>
-        <li>Conventional Heat Detector</li>
-      </ul>
-    </div>
-  </div>
-  <div class="card">
-    <div class="imgBx">
-      <a href="#">
-        <img class="image" src="/images/img4.webp" alt="image" />
-      </a>
-    </div>
-    <div class="details">
-      <h2 class="heading">Industrial Valves</h2>
-      <br />
-      <ul>
-        <li>Fire Hydrant Valve</li>
-        <li>Ul Listed Sprinkler</li>
-        <li>Fire Lines Valves</li>
-      </ul>
-    </div>
-  </div>
-  <div class="card">
-    <div class="imgBx">
-      <a href="#">
-        <img class="image" src="/images/img2.webp" alt="image" />
-      </a>
-    </div>
-    <div class="details">
-      <h2 class="heading">Industrial Valves</h2>
-      <br />
-      <ul>
-        <li>Fire Hydrant Valve</li>
-        <li>Ul Listed Sprinkler</li>
-        <li>Fire Lines Valves</li>
-      </ul>
-    </div>
-  </div>
-</div>
+<section class="total-items">
 
-    <div class="heading-title">
-        <h1>Systems</h1>
-    
+    <div class="title">
+        <h1>Products & Services</h1>          
+          <nav aria-label="breadcrumb" class="breadcrumb-header">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page"><a href="/total-systems">Products & Services</a></li>
+            </ol>
+          </nav>
+          
+    <div class="form-search">
+        <div class="search">
+            <input class="search-box" type="search" placeholder="Search">
+        </div>
+    </div>
+    </div>
+
+    <div class="subtitle">
+        <h2>Empowering Safety: Comprehensive Fire Solutions and Services</h2>
+    </div>
+
+    <div class="para">
+        <p>
+            Embrace a diverse array of fire safety solutions and services offered by NFPA. Committed to the highest moral and ethical standards, we present an extensive range of products including Fire Extinguishers, Automatic Fire Detectors, Suppression Systems, Safety Sign Boards, and more. Our dedication extends to upholding standard operating practices across all systems, ensuring unparalleled quality and reliability.
+            <br>
+
+            Discover NFPA's comprehensive services, featuring various Annual Maintenance Contract (AMC) modules, both comprehensive and non-comprehensive. Benefit from our expert support in Form A, Form B, and NOC documentation, backed by a nationwide service availability. NFPA is your trusted partner for top-tier fire safety solutions and support across India.
+        </p>
+    </div>
+
+    <div class="product-container">
+    </div>
+    <div class="product-container1">
+    </div>
+
+    <div class="heading1">Systems</div>
+
     <div class="container">
+
         <div class="card">
             <div class="imgBx">
-                <a href="#">
-                    <img class="image" src="../../assets/images/img1.jpg" alt="image">
+                <a href="/itemss">
+                    <img class="image" src="../../assets/images/supp-img.jpg" alt="image">
                 </a>
             </div>
+
             <div class="details">
                 <h2 class="heading">Fire Suppression System</h2>
                 <br>
                 <ul>
-                    <li>Wet Chemical Fire Suppression System</li>
-                    <li>Electrical Panel Fire Suppression System</li>
-                    <li>Tube Base Suppression System</li>
+                    <a href="/itemss"><li>Wet Chemical Fire Suppression System</li></a>
+                    <a href="/itemss"><li>Electrical Panel Fire Suppression System</li></a>
+                    <a href="/itemss"><li>Tube Base Suppression System</li></a>
                 </ul>
             </div>
         </div>
+
         <div class="card">
             <div class="imgBx">
                 <a href="#">
@@ -95,9 +66,9 @@
                 <h2 class="heading">Fire Alarm System</h2>
                 <br>
                 <ul>
-                    <li>Conventional Fire Alarm System</li>
-                    <li>Standalone Smoke Detector</li>
-                    <li>Conventional Heat Detector</li>
+                    <a href="/itemss"><li>Conventional Fire Alarm System</li></a>
+                    <a href="/itemss"><li>Standalone Smoke Detector</li></a>
+                    <a href="/itemss"><li>Conventional Heat Detector</li></a>
                 </ul>
             </div>
         </div>
@@ -111,9 +82,9 @@
                 <h2 class="heading">Industrial Valves</h2>
                 <br>
                 <ul>
-                    <li>Fire Hydrant Valve</li>
-                    <li>Ul Listed Sprinkler</li>
-                    <li>Fire Lines Valves</li>
+                    <a href="/itemss"><li>Fire Hydrant Valve</li></a>
+                    <a href="/itemss"><li>Ul Listed Sprinkler</li></a>
+                    <a href="/itemss"><li>Fire Lines Valves</li></a>
                 </ul>
             </div>
         </div>
@@ -127,18 +98,20 @@
                 <h2 class="heading">Industrial Valves</h2>
                 <br>
                 <ul>
-                    <li>Fire Hydrant Valve</li>
-                    <li>Ul Listed Sprinkler</li>
-                    <li>Fire Lines Valves</li>
+                    <a href="/itemss"><li>Fire Hydrant Valve</li></a>
+                    <a href="/itemss"><li>Ul Listed Sprinkler</li></a>
+                    <a href="/itemss"><li>Fire Lines Valves</li></a>
                 </ul>
             </div>
         </div>
     </div>
-</div>
 
-<div class="heading-title">
-    <h1>Products</h1>
+    <div class="product-container">
+    </div>
+    <div class="product-container1">
+    </div>
 
+    <div class="heading1">Products</div>
 <div class="container">
     <div class="card">
         <div class="imgBx">
@@ -150,9 +123,9 @@
             <h2 class="heading">Fire Extinguisher</h2>
             <br>
             <ul>
-                <li>C02 fire Extinguisher</li>
-                <li>Dry powder fire Extinguisher</li>
-                <li>Clean Agent fire Extinguisher</li>
+                <a href="/itemss"><li>C02 fire Extinguisher</li></a>
+                <a href="/itemss"><li>Dry powder fire Extinguisher</li></a>
+                <a href="/itemss"><li>Clean Agent fire Extinguisher</li></a>
             </ul>
         </div>
     </div>
@@ -166,9 +139,9 @@
             <h2 class="heading">Fire Alarm System</h2>
             <br>
             <ul>
-                <li>Conventional Fire Alarm System</li>
-                <li>Standalone Smoke Detector</li>
-                <li>Conventional Heat Detector</li>
+                <a href="/itemss"><li>Conventional Fire Alarm System</li></a>
+                <a href="/itemss"><li>Standalone Smoke Detector</li></a>
+                <a href="/itemss"><li>Conventional Heat Detector</li></a>
             </ul>
         </div>
     </div>
@@ -182,9 +155,9 @@
             <h2 class="heading">Industrial Valves</h2>
             <br>
             <ul>
-                <li>Fire Hydrant Valve</li>
-                <li>Ul Listed Sprinkler</li>
-                <li>Fire Lines Valves</li>
+                <a href="/itemss"><li>Fire Hydrant Valve</li></a>
+                <a href="/itemss"><li>Ul Listed Sprinkler</li></a>
+                <a href="/itemss"><li>Fire Lines Valves</li></a>
             </ul>
         </div>
     </div>
@@ -198,17 +171,20 @@
             <h2 class="heading">Industrial Valves</h2>
             <br>
             <ul>
-                <li>Fire Hydrant Valve</li>
-                <li>Ul Listed Sprinkler</li>
-                <li>Fire Lines Valves</li>
+                <a href="/itemss"><li>Fire Hydrant Valve</li></a>
+                <a href="/itemss"><li>Ul Listed Sprinkler</li></a>
+                <a href="/itemss"><li>Fire Lines Valves</li></a>
             </ul>
         </div>
     </div>
-</div>
 </div>
 
-<div class="heading-title">
-    <h1>Services</h1>
+<div class="product-container">
+    </div>
+    <div class="product-container1">
+    </div>
+    
+<div class="heading1">Services</div>
 
 <div class="container">
     <div class="card">
@@ -221,9 +197,9 @@
             <h2 class="heading">Fire Suppression System</h2>
             <br>
             <ul>
-                <li>Wet Chemical Fire Suppression System</li>
-                <li>Electrical Panel Fire Suppression System</li>
-                <li>Tube Base Suppression System</li>
+                <a href="/itemss"><li>Wet Chemical Fire Suppression System</li></a>
+                <a href="/itemss"><li>Electrical Panel Fire Suppression System</li></a>
+                <a href="/itemss"><li>Tube Base Suppression System</li></a>
             </ul>
         </div>
     </div>
@@ -237,9 +213,9 @@
             <h2 class="heading">Fire Alarm System</h2>
             <br>
             <ul>
-                <li>Conventional Fire Alarm System</li>
-                <li>Standalone Smoke Detector</li>
-                <li>Conventional Heat Detector</li>
+                <a href="/itemss"><li>Conventional Fire Alarm System</li></a>
+                <a href="/itemss"><li>Standalone Smoke Detector</li></a>
+                <a href="/itemss"><li>Conventional Heat Detector</li></a>
             </ul>
         </div>
     </div>
@@ -253,9 +229,9 @@
             <h2 class="heading">Industrial Valves</h2>
             <br>
             <ul>
-                <li>Fire Hydrant Valve</li>
-                <li>Ul Listed Sprinkler</li>
-                <li>Fire Lines Valves</li>
+                <a href="/itemss"><li>Fire Hydrant Valve</li></a>
+                <a href="/itemss"><li>Ul Listed Sprinkler</li></a>
+                <a href="/itemss"><li>Fire Lines Valves</li></a>
             </ul>
         </div>
     </div>
@@ -269,11 +245,11 @@
             <h2 class="heading">Industrial Valves</h2>
             <br>
             <ul>
-                <li>Fire Hydrant Valve</li>
-                <li>Ul Listed Sprinkler</li>
-                <li>Fire Lines Valves</li>
+                <a href="/itemss"><li>Fire Hydrant Valve</li></a>
+                <a href="/itemss"><li>Ul Listed Sprinkler</li></a>
+                <a href="/itemss"><li>Fire Lines Valves</li></a>
             </ul>
         </div>
     </div>
 </div>
-</div>
+</section>
