--- a/nfpa/src/app/contact-us/contact-us.component.css
+++ b/nfpa/src/app/contact-us/contact-us.component.css
@@ -1,8 +1,45 @@
 
 nav{
-    display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
     z-index: 100;
+}
+
+.total-items {
+    font-family: 'Poppins', sans-serif;
+}
+
+.title {
+    background-color: #0a5983;
+    color: #fff;
+    width: 100%;
+    height: 150px;
+    position: relative;
+}
+
+.title h1 {
+    padding: 20px;
+}
+
+.breadcrumb-header {
+    display: flex;
+    align-items: center;
+    padding: 2px 20px;
+    font-size: 1rem;
+    color: white;
+    margin-top: 0.25%;
+    letter-spacing: 1px;
+}
+
+.breadcrumb-item {
+    margin-right: 5px;
+}
+
+.breadcrumb a {
+    color: white;
+    cursor: pointer;
+}
+
+.breadcrumb a:hover {
+    color: #97d3f9;
 }
