--- a/nfpa/src/app/contact-us/contact-us.component.html
+++ b/nfpa/src/app/contact-us/contact-us.component.html
@@ -1,1 +1,16 @@
-<p>contact-us works!</p>
+<section class="total-items">
+
+    <div class="title">
+        <h1>Contact Us</h1>          
+        <nav aria-label="breadcrumb" class="breadcrumb-header">
+            <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page"><a href="/contact-us">Contact Us</a></li>
+            </ol>
+        </nav>
+        
+    
+    </div>
+</section>
+
+    <p>contact-us works</p>
