--- a/nfpa/src/app/contact-us/contact-us.component.html
+++ b/nfpa/src/app/contact-us/contact-us.component.html
@@ -8,9 +8,34 @@
             <li class="breadcrumb-item active" aria-current="page"><a href="/contact-us">Contact Us</a></li>
             </ol>
         </nav>
-        
-    
     </div>
 </section>
 
-    <p>contact-us works</p>
+<div class="contact">
+    <h2>Get in touch: your message matters to us.</h2>
+</div>
+
+<div class="info-container">
+    <div class="contact-card1">
+        <img src="../../assets\images\email.png" alt="Contact photo">
+        <strong style="font-weight: bold;">Email & Phone</strong>
+        <a href="mailto:info@nfpa.in">
+        <strong style="font-weight: bold;">Email: </strong>info&#64;nfpa.in
+        </a>
+        <a href="mailto:sales@nfpa.in">
+        <strong style="font-weight: bold;">Enquiry:</strong> sales&#64;nfpa.in
+        </a>
+        <p>Contact No.: +91 9403732325</p>
+    </div>
+
+    <div class="contact-card2">
+        <img src="../../assets\images\business.png" alt="Business photo">
+        <strong style="font-weight: bold;">Office Address</strong>
+        <p>RH-15, Sai Angan Society, Wadmukhwadi,<br> Moshi, Pune -412105</p>
+    </div>
+      
+</div>
+
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7561.111848616005!2d73.86938285869141!3d18.639033299999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c7ba165d34ed%3A0xcd2e54b2716695a4!2sNational%20Fire%20Protection%20Armour!5e0!3m2!1sen!2sin!4v1707750500515!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
