--- a/nfpa/src/app/contact-us/contact-us.component.css
+++ b/nfpa/src/app/contact-us/contact-us.component.css
@@ -43,3 +43,69 @@ nav{
 .breadcrumb a:hover {
     color: #97d3f9;
 }
+
+.map {
+    border: 3px solid #000000;
+    margin-left: 60%;
+    margin-top: 35%;
+}
+
+.contact h2 {
+    font-family: "Helvetica", sans-serif;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    color: #000000;
+    text-align: center;
+}
+
+ .info-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+  
+  .contact-card1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #FAF0E6;
+    border-radius: 2px;
+    background-color:	#FAF0E6 ;
+  }
+
+  .contact-card1 img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+  
+  .contact-card1 a,
+  .contact-card1 strong,
+  .contact-card1 p {
+    margin: 5px 0;
+  }
+
+  .contact-card2 {
+    margin-right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #FAF0E6;
+    border-radius: 2px;
+    background-color:	#FAF0E6 ;
+  }
+
+  .contact-card2 img {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .contact-card2 strong,
+  .contact-card2 p {
+    text-align: center;
+    margin: 5px 0;
+  }
