--- a/nfpa/src/app/footer/footer.component.html
+++ b/nfpa/src/app/footer/footer.component.html
@@ -5,14 +5,13 @@
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
-      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/nationalfireprotectionarmour/" role="button"
         ><i class="fab fa-facebook-f"></i
       ></a>
 
       <!-- Twitter -->
-      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-twitter"></i
-      ></a>
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/" role="button"
+        ><i class="fa-brands fa-x-twitter"></i></a>
 
       <!-- Google -->
       <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
@@ -20,19 +19,16 @@
       ></a>
 
       <!-- Instagram -->
-      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/" role="button"
         ><i class="fab fa-instagram"></i
       ></a>
 
       <!-- Linkedin -->
-      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="https://linkedin.com/" role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
 
-      <!-- Github -->
-      <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-github"></i
-      ></a>
+
     </section>
     <!-- Section: Social media -->
 
@@ -76,9 +72,7 @@
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-        repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-        eum harum corrupti dicta, aliquam sequi voluptate quas.
+       YOUR SAFETY, OUR RESPONSIBILITY
       </p>
     </section>
     <!-- Section: Text -->
@@ -89,20 +83,23 @@
       <div class="row">
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
+          <h5 class="text-uppercase">Page Structure</h5>
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="#!" class="text-white">Link 1</a>
+              <a href="#!" class="text-white">Home</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 2</a>
+              <a href="#!" class="text-white">About Us</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 3</a>
+              <a href="#!" class="text-white">Product & Services</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 4</a>
+              <a href="#!" class="text-white">Photo Gallery</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Contact</a>
             </li>
           </ul>
         </div>
