--- a/nfpa/src/app/navbar/navbar.component.css
+++ b/nfpa/src/app/navbar/navbar.component.css
@@ -1,17 +1,31 @@
+.navbarContainer{
+    width: 100%;
+    height: 4.5rem;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+}
+
 nav{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    z-index: 100;
+    z-index: 200;
+    background-color: pink;
 }
 
+.closed{
+    animation: fadeInDown 0.7s ease;
+}
+
+
 .logoName {
-    flex: 2;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .logoName span{
@@ -20,14 +34,7 @@ nav{
     font-size: 22px;
     font-weight: 400;
     word-spacing: 1px;
-    
-    /* background-image: url("C:/Users/Admin/Desktop/fire2.jpg");
-    background-repeat: repeat;
-    background-position: center; 
-    background-size: contain; 
-    background-clip: text; 
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;  */
+    white-space: nowrap;
 }
 
 .logoImage {
@@ -37,8 +44,9 @@ nav{
 }
 
 .menu {
-    flex: 3;
+    width: 100%;
     display: flex;
+    align-items: center;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
@@ -46,39 +54,253 @@ nav{
     font-weight: 300;
     font-size: 15px;
     letter-spacing: 1px;
+    list-style-type: none;
+
 }
+
 
 .menu a {
     text-decoration: none;
-    color: #000;
 }
 
 .menu a:hover {
     font-weight: 400;
 }
 
+.open .menu a{ 
+    color: black;
+}
+
+.closed .menu a{
+    color: white;
+}
+
+.buttonContainer{
+    display: none;
+    /* padding-right: 10px; */
+}
+
+.menuContainer{
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    letter-spacing: 1px;
+    list-style-type: none;
+    animation: menuFadeIn 0.7s ease;
+}
+
+.menuContainer li a{
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+}
+
+ 
+.menuContainerAbsent{
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    letter-spacing: 1px;
+    list-style-type: none;
+    animation: menuFadeOut 1s ease forwards;
+}
+
+.menuContainerAbsent li a{
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+}
+
+@media screen and (max-width: 768px) {
 
 
-/* @keyframes fadeInDown {
-    from {
-        opacity: 0;
-        transform: translateY(-50px);
+
+    .logoImage{
+        margin-right: 0px;
     }
-    to {
-        opacity: 1;
+
+    .menu li{ display: none;}
+
+    .menu{
+        justify-content: center; 
+        /* do jc = end above */
+        align-items: center;
+        text-align: center;
+        margin-bottom: 20px;
+
+    }
+
+    .buttonContainer{
+        display: block;
+        background-color: aqua;
+        height: 10px;
+        width: 10px;
+        margin-right: 10px;
+    }
+
+    .menuButton{
+        font-size: 10px;
+    }
+
+    
+}
+
+
+
+@keyframes fadeInDown {
+    0% {
+        transform: translateY(-100);
+    }
+    10% {
+        transform: translateY(-90px); 
+    }
+    20% {
+        transform: translateY(-80px); 
+    }
+    30% {
+        transform: translateY(-70px); 
+    }
+    40% {
+        transform: translateY(-60px); 
+    }
+    50% {
+        transform: translateY(-50px); 
+    }
+    60% {
+        transform: translateY(-40px); 
+    }
+    70% {
+        transform: translateY(-30px); 
+    }
+    80% {
+        transform: translateY(-20px); 
+    }
+    90% {
+        transform: translateY(-10px); 
+    }
+    100% {
+        transform: translateY(0); 
+    }
+} 
+
+
+@keyframes fadeOutUp {
+    0% {
         transform: translateY(0);
     }
-} */
-
-
-/* @keyframes fadeOutDown {
-    from {
-
-        transform: translateY(0);
+    10% {
+        transform: translateY(-10px); 
     }
-    to {
+    20% {
+        transform: translateY(-20px); 
+    }
+    30% {
+        transform: translateY(-30px); 
+    }
+    40% {
+        transform: translateY(-40px); 
+    }
+    50% {
+        transform: translateY(-50px); 
+    }
+    60% {
+        transform: translateY(-60px); 
+    }
+    70% {
+        transform: translateY(-70px); 
+    }
+    80% {
+        transform: translateY(-80px); 
+    }
+    90% {
+        transform: translateY(-90px); 
+    }
+    100% {
+        transform: translateY(-100px); 
+    }
+}
 
-        transform: translateY(-1000px);
+@keyframes menuFadeIn {
+    0% {
+        transform: translateY(-100px);
+    }
+    10% {
+        transform: translateY(-90px); 
+    }
+    20% {
+        transform: translateY(-80px); 
+    }
+    30% {
+        transform: translateY(-70px); 
+    }
+    40% {
+        transform: translateY(-60px); 
+    }
+    50% {
+        transform: translateY(-50px); 
+    }
+    60% {
+        transform: translateY(-40px); 
+    }
+    70% {
+        transform: translateY(-30px); 
+    }
+    80% {
+        transform: translateY(-20px); 
+    }
+    90% {
+        transform: translateY(-10px); 
+    }
+    100% {
+        transform: translateY(0); 
     }
     
-} */
+}
+
+@keyframes menuFadeOut {
+    0% {
+        transform: translateY(0);
+    }
+    10% {
+        transform: translateY(-10px); 
+    }
+    20% {
+        transform: translateY(-20px); 
+    }
+    30% {
+        transform: translateY(-30px); 
+    }
+    40% {
+        transform: translateY(-40px); 
+    }
+    50% {
+        transform: translateY(-50px); 
+    }
+    60% {
+        transform: translateY(-60px); 
+    }
+    70% {
+        transform: translateY(-70px); 
+    }
+    80% {
+        transform: translateY(-80px); 
+    }
+    90% {
+        transform: translateY(-90px); 
+    }
+    100% {
+        transform: translateY(-100px); 
+    }
+}
+
+
+
+
