--- a/nfpa/src/app/contact-us/contact-us.component.css
+++ b/nfpa/src/app/contact-us/contact-us.component.css
@@ -44,19 +44,102 @@ nav{
     color: #97d3f9;
 }
 
+
+.mapform {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 5%;
+    background-color: #FFF7F1;
+}
+
 .map {
     border: 3px solid #000000;
-    margin-left: 60%;
-    margin-top: 35%;
+    margin-left: 10%;
+    margin-top: 3%;
+    width: auto;
+    height: 450px;
+}
+
+.contact-form {
+    margin-top: 5%;
+    color: #000000;
+    margin-bottom: 5%;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 0 auto; /* Center the form */
+    font-family: sans-serif;
 }
 
 .contact h2 {
-    font-family: "Helvetica", sans-serif;
+    
     margin-top: 2%;
     margin-bottom: 2%;
     color: #000000;
     text-align: center;
 }
+
+.contact-form h3 {
+    font-family: "Helvetica", sans-serif;
+    margin-bottom: 10px;
+    font-weight: bold;
+    text-align: center;
+  }
+  
+  .contact-form p {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .contact-form label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .contact-form label strong {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .contact-form input,
+  .contact-form textarea {
+    display: block;
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box; /* Include padding in width */
+  }
+  
+  
+  .contact-form textarea {
+    height: 150px;
+  }
+  
+  .contact-form button {
+    background-color: #ff0000;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+    margin-right: 10px;
+    float: center; 
+  }
+  
+  .contact-form button:hover {
+    background-color: #46a049;
+  }
+  
+  .contact-form [required]::after {
+    content: "*";
+    color: red;
+    margin-left: 5px;
+  }
+
 
  .info-container {
     display: flex;
