--- a/nfpa/src/app/contact-us/contact-us.component.html
+++ b/nfpa/src/app/contact-us/contact-us.component.html
@@ -36,6 +36,42 @@
       
 </div>
 
+<div class="mapform">
+    <div>
+        <form class="contact-form">
+            <h3>Get in Touch</h3>
+            <p>Fill out the form below to send us a message.</p>
+          
+            <label for="name">
+              <strong>Name*:</strong>
+              <input type="text" id="name" name="name" placeholder="Enter Name" required>
+            </label>
+          
+            <label for="email">
+              <strong>Email*:</strong>
+              <input type="email" id="email" name="email" placeholder="Enter Email" required>
+            </label>
+          
+            <label for="phone">
+              <strong>Phone Number:</strong>
+              <input type="tel" id="phone" name="phone" placeholder="Enter Phone Number">
+            </label>
+          
+            <label for="message">
+              <strong>Message:</strong>
+              <textarea id="message" name="message" rows="5" placeholder="Enter Message"></textarea>
+            </label>
+          
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
+          </form>
+          
+          
+         
+    </div>
+
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7561.111848616005!2d73.86938285869141!3d18.639033299999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c7ba165d34ed%3A0xcd2e54b2716695a4!2sNational%20Fire%20Protection%20Armour!5e0!3m2!1sen!2sin!4v1707750500515!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
+</div>
