--- a/nfpa/src/app/our-services/our-services.component.css
+++ b/nfpa/src/app/our-services/our-services.component.css
@@ -1,7 +1,7 @@
 .container{
     padding-top: 20px;
     background-color: white;
-    background-image: url("../../assets/firefighter-transformed.jpeg");
+    background-image: url("../../assets/services_img.png");
     background-size: cover;
     background-position: center; /* Center the background image */
     background-repeat: no-repeat;
